fixed the text overlapping

--- a/Style.css
+++ b/Style.css
@@ -6,7 +6,7 @@ body{
     border: 2px inset #969533;
     border-radius: 14px;
     margin: 60px 100px;  
-    padding: 15px;
+    padding: 10px;
 }
 
 h1{
@@ -20,7 +20,7 @@ h2{
 }
 
 p{
-    line-height: 1.6px;
+    line-height: 20px;
 }
 
 ul {
@@ -66,7 +66,7 @@ section {
     border: 2px solid black;
     border-radius: 20px;
     margin: 50px auto;
-    padding: 30px;
+    padding: 0;
     width: 90%;
     max-width: 1000px;
 }
